# ZX-stabiliser-simulator

./: .gitignore  README.md  cat_star_decompositon_finder.ipynb
zx-sim/: Cargo.toml
zx-sim/src/: config.ini  decompositions.rs  kahip_cut.rs  kahypar_decomposition.rs  lib.rs  main.rs  simulator.rs  utilities.rs  weak_simulator.rs
